--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "archiver": "^5.0.0",
     "axios": "^0.20.0"
-  }, "devDependencies": {
+  },
+  "devDependencies": {
     "@google-cloud/functions-framework": "^1.7.1"
   }
 }
